# hw06-joezhou99

./: .buildinfo  Makefile  README.html  README.md  _config.yml  conf.py  environment.yml  genindex.html  hw06-description.html  index.html  index.ipynb  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle  hw06-description.doctree
.doctrees/.pytest_cache/: README.doctree
.pytest_cache/: README.html
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  index.doctree
_build/html/_sources/: README.md  index.ipynb
_build/jupyter_execute/: index.ipynb  index.py
_sources/: README.md
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/tests/: __init__.py  test_readligo.py  test_utils.py
